in 'main' element, change max-height to height, to prevent collapse of ui-view into smaller area

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -21,7 +21,7 @@
 }
 
 #main {
-  max-height: 90vh;
+  height: 90vh;
   background-image: url('/assets/typewriter.jpg');
   background-size: cover;
   overflow: scroll;
